# linkedin-profile-optimizer

./: .gitignore  LICENSE  README.md  api.py  app.py  pyproject.toml  run_with_resume.py
.kiro/specs/linkedin-profile-optimizer/: .config.kiro  design.md  design_clean.md  requirements.md  tasks.md
data/: config.json
docs/: ARCHITECTURE.md  SETUP_GUIDE.md
src/linkedin_optimizer/: __init__.py  __main__.py  cli.py  config.py  models.py  orchestrator.py  scheduler.py
src/linkedin_optimizer/agents/: __init__.py  analyzer_agent.py  content_creator_agent.py
src/linkedin_optimizer/approval/: __init__.py  cli_interface.py  workflow.py
src/linkedin_optimizer/integrations/: __init__.py  hf_client.py
src/linkedin_optimizer/persistence/: __init__.py  data_store.py
src/linkedin_optimizer/scrapers/: __init__.py  github_extractor.py  linkedin_mcp_client.py  profile_scraper.py
src/linkedin_optimizer/tracking/: __init__.py  engagement_tracker.py
tests/integration/: test_full_pipeline.py
tests/property/: test_approval_logic.py  test_content_constraints.py  test_engagement_calculations.py  test_extraction_errors.py  test_github_filtering.py  test_hf_retry_fallback.py  test_model_serialization.py  test_pipeline_ordering.py  test_report_structure.py  test_scoring_logic.py
tests/unit/: test_config.py  test_data_store.py  test_engagement_tracker.py  test_github_extractor.py  test_hf_client.py  test_linkedin_mcp_client.py  test_models.py  test_orchestrator.py  test_profile_scraper.py  test_scheduler.py
web/static/: index.html
