[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-optimizer"
version = "0.1.0"
description = "A multi-agent pipeline for LinkedIn profile optimization"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: Property-based tests using Hypothesis",
    "integration: Integration tests requiring external services",
    "slow: Tests that take longer than 5 seconds to run",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_optimizer"]
